--- a/resources/sass/layout/_nav.scss
+++ b/resources/sass/layout/_nav.scss
@@ -8,6 +8,9 @@ nav {
                 width: 193px;
                 height: 30px;
                 margin: auto 0;
+                @include oddBreakpoint(999px) {
+                    margin: 3rem 0;
+                }
             }
             .menu {
                 display: flex;
@@ -25,9 +28,25 @@ nav {
                 li:last-child {
                     margin: 3rem 0rem 3rem 8rem;
                     cursor: pointer;
+                    @media screen and (max-width: 1120px) {
+                        margin: 3rem 0;
+                    }
                     i {
                         color: $color-search;
                     }
+                }
+                @include oddBreakpoint(999px) {
+                    display: none;
+                }
+            }
+            .menu-icon {
+                display: none;
+                i {
+                    cursor: pointer;
+                }
+                @include oddBreakpoint(999px) {
+                    display: block;
+                    margin: auto 0;
                 }
             }
         }
