--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,7 @@
 @import "layout/achievements.scss";
 @import "components/awesometab";
 @import "layout/company-job";
+@import "layout/leader";
 @import "layout/video";
 @import "layout/feedback";
 @import "components/optimize_image";
