--- a/resources/sass/layout/_leader.scss
+++ b/resources/sass/layout/_leader.scss
@@ -53,6 +53,7 @@
                         small {
                             text-transform: uppercase;
                             color: #03a9f4;
+                            font-size: 0.7em
                         }
                         h4 {
                             text-transform: uppercase;
@@ -67,6 +68,7 @@
                         small {
                             text-transform: uppercase;
                             color: #03a9f4;
+                            font-size: 0.7em;
                         }
                         h4 {
                             text-transform: uppercase;
