--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,7 @@
 @import "layout/feedback";
 @import "components/optimize_image";
 @import "components/animate";
+@import "components/icon";
 @import "layout/activities";
 @import "layout/logo-advertisement";
 @import "layout/about-website";
