--- a/resources/sass/layout/_service.scss
+++ b/resources/sass/layout/_service.scss
@@ -10,7 +10,7 @@
             border-bottom: 1px solid #ece5e5;
             /* border-right: 1px solid #ece5e5; */
             /* background-color: white; */
-            background-image: url("../images/bg-service.png");
+            background-image: url("images/bg-service.png");
             background-size: cover;
             &:hover {
                 background-color: #03a9f4;
