--- a/resources/sass/layout/_banner.scss
+++ b/resources/sass/layout/_banner.scss
@@ -1,5 +1,5 @@
 .banner {
-    background-image: url("images/bg-banner2.jpg");
+    background-image: url("../images/bg-banner2.jpg");
     background-size: cover;
     .container {
         @extend %container;
